2020-06-18  Karl Rackler  <rackler@apple.com>

        [ Catalina Debug WK2 ] fast/events/platform-wheelevent-in-scrolling-div.html is a flaky failure
        https://bugs.webkit.org/show_bug.cgi?id=213351

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2020-06-18  Zalan Bujtas  <zalan@apple.com>

        [LFC][BFC] Available space computation for the float avoider needs coordinate mapping
        https://bugs.webkit.org/show_bug.cgi?id=213339

        Reviewed by Antti Koivisto.

        * fast/layoutformattingcontext/float-avoider-available-horizontal-space-expected.html: Added.
        * fast/layoutformattingcontext/float-avoider-available-horizontal-space.html: Added.

2020-06-18  Geoffrey Garen  <ggaren@apple.com>

        inspector/canvas/create-context-webgpu.html was a flaky failure after r262904
        https://bugs.webkit.org/show_bug.cgi?id=213343

        Reviewed by Darin Adler.

        This test races a zero-delay GC timer against WebCore releasing its last
        reference to a WebGPU canvas. Flaky!

        Make GC deterministic by continually retrying GC until the Web
        Inspector is notified that the canvas has been collected.

        Also make sure to stop GC'ing afterwards. I'm not sure if this matters
        or not, but it is good to prevent one test from changing behavior in
        another.

        * inspector/canvas/resources/create-context-utilities.js:
        (destroyCanvases):

2020-06-18  Youenn Fablet  <youenn@apple.com>

        REGRESSION (r263098): [Win10] http/tests/security/cross-origin-clean-css-resource-timing.html and http/tests/security/cross-origin-css-resource-timing.html are failing
        https://bugs.webkit.org/show_bug.cgi?id=213303
        <rdar://problem/64452203>

        Reviewed by Alex Christensen.

        * platform/win/TestExpectations:

2020-06-18  Alexey Shvayka  <shvaikalesh@gmail.com>

        TypedArray.prototype.set is incorrect with primitives