@@ -1,6 +1,5 @@
 ALERT: (null)
-layer at (0,0) size 800x600
-  RenderView at (0,0) size 800x600
-layer at (0,0) size 800x600
-  RenderBlock {HTML} at (0,0) size 800x600
-    RenderBody {BODY} at (8,8) size 784x584
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
