@@ -1,3 +1,12 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+<script src="../../../resources/js-test-pre.js"></script>
+</head>
+<body>
 <script>
   alert(String.fromCharCode(0xd800));
 </script>
+<script src="../../../resources/js-test-post.js"></script>
+</body>
+</html>
