@@ -1,3 +1,11 @@
+2020-06-18  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        Unreviewed, fix test failure in Windows
+        https://bugs.webkit.org/show_bug.cgi?id=213269
+
+        * fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash-expected.txt:
+        * fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.html:
+
 2020-06-18  Karl Rackler  <rackler@apple.com>
 
         [ Catalina Debug WK2 ] fast/events/platform-wheelevent-in-scrolling-div.html is a flaky failure
